Policies/Kyverno/cosign_signatures.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-signatures
  annotations:
    policies.kyverno.io/title: Verify Cosign Signatures
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
spec:
  validationFailureAction: Enforce 
  webhookTimeoutSeconds: 30
  rules:
    - name: verify-ghcr-signatures
      match:
        any:
        - resources:
            kinds:
              - Pod
      verifyImages:
      - imageReferences:
        - "ghcr.io/giannisstathoudakis/*"
        verifyDigest: true
        required: true
        mutateDigest: true
        attestors:
        - entries:
          - keys:
              secret:
                name: kyverno-cosign-secret
                namespace: kyverno
