Policies/Kyverno/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
  annotations:
    policies.kyverno.io/title: Disallow Latest Tag
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-image-tag
      skipBackgroundRequests: true
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        allowExistingViolations: true
        message: "Using :latest is forbidden."
        pattern:
          spec:
            containers:
            - image: "*:?* & !*:latest"
